--- a/VagrantFile
+++ b/VagrantFile
@@ -1,7 +1,7 @@
 Vagrant.configure("2") do |config|
   # "Master" server configuration 
   config.vm.define "Master" do |master|
-    master.vm.box = "ubuntu/2204"
+    master.vm.box = "generic/ubuntu2204"
     master.vm.network "private_network", type: "dhcp"
     master.vm.hostname = "Master"
 
@@ -13,7 +13,7 @@ Vagrant.configure("2") do |config|
   
   # "Slave" server configuration 
   config.vm.define "Slave" do |slave|
-    slave.vm.box = "ubuntu/2204"
+    slave.vm.box = "generic/ubuntu2204"
     slave.vm.network "private_network", type: "dhcp"
     slave.vm.hostname = "Slave"
   end
